--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </div>
                 <br><br>
                 <div class="inputbox">
-                    <label for="datanascimento" class=""><b>Data de Nacimento:</b></label>
-                    <input type="date" name="" id="datanascimento">
+                    <label for="datanascimento" ><b>Data de Nacimento:</b></label>
+                    <input type="date" name="datanascimento" id="datanascimento">
                 </div>
                 <br><br>
                 <div class="inputbox">
